test
-tests for validateCardTrade()

-tests for validateAttck()